--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,16 +1,16 @@
-{% if page.comments %}
+{% if site.disqus_shortname and page.comments %}
   <div id="disqus_thread"></div>
   <script>
 
   /**
   *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
   *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables*/
-  
+  /*
   var disqus_config = function () {
-  //this.page.url = '{{ site.disqus_url }}'; // Replace PAGE_URL with your page's canonical URL variable
-  this.page.identifier = '{{ site.disqus_shortname }}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+  this.page.url = ''; // Replace PAGE_URL with your page's canonical URL variable
+  this.page.identifier = ''; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
   };
-
+  */
   var disqus_shortname = '{{ site.disqus_shortname }}';
 
   (function() { // DON'T EDIT BELOW THIS LINE
