Added monokai style code highlighting

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -23,6 +23,9 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400|Roboto:100,300,400,900&amp;subset=cyrillic" rel="stylesheet">
   <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">  
 
+  <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono" rel="stylesheet">
+  <link rel="stylesheet" href="{{ site.baseurl }}public/css/monokai.css">
+
   <script   src="https://code.jquery.com/jquery-3.1.1.slim.min.js"   integrity="sha256-/SIrNqv8h6QGKDuNoLGA4iret+kyesCkHGzVUUV0shc="   crossorigin="anonymous"></script>
 
   <!-- KaTeX -->
